# A-B-Test-Causal-Contamination-Forensics

./: .gitignore  Dockerfile  README.md  Submission Report.md  ab_test_contamination_openenv_blueprint 5.35.49 PM.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: round1-quality-gate.yml
api/: __init__.py  app.py  routes.py
artifacts/: determinism_report.json
env/: __init__.py  action_executor.py  data_generator.py  observation_builder.py  reward_engine.py  state_manager.py  synthetic_fixtures.py
env/contracts/: data_generator_output.schema.json
grader/: __init__.py  grader.py
models/: __init__.py  action.py  contamination_spec.py  observation.py  reward.py
scripts/: check_inference_stdout.py  generate_determinism_report.py  round1-gate.sh  validate-submission.sh
server/: app.py
tasks/: __init__.py  task_1_srm.py  task_2_simpsons.py  task_3_multilayer.py  task_4_clean.py  task_5_expert.py  task_generator.py
tests/: test_api.py  test_grader.py
